--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/BackLog?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=1234
 
+#hibernate
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.properties.hibernate.show.sql = true
+spring.jpa.generate-ddl=true
+logging.level.org.hibernate.SQL=DEBUG
