--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=1234
 
 #hibernate
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.show.sql = true
 spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=DEBUG
